--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -1,8 +1,10 @@
 .hero {
   width: 100%;
-  height: 100vh;
+  height: 50vh;
   background-position: center;
+  background-size: cover;
   background-attachment: fixed;
+  background-repeat: no-repeat;
   position: relative;
 }
 
@@ -13,30 +15,40 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: var(--dark-opacity-8);
 }
 
 .hero-desc {
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 50%;
   z-index: 1;
-  max-width: 100%;
-  transform: translate(-50%, -50%);
-}
-
-@media (max-width: 768px) {
-  .hero {
-    height: 100vh;
-  }
+  width: 100%;
+  transform: translate(-50%, -30%);
+  text-align: center;
 }
 
 .hero-desc h1 {
   color: var(--whiteColor);
   font-size: calc(var(--large-font) + 30px);
+  position: relative;
+  width: fit-content;
+  margin: 0 auto var(--margin-10);
+}
+
+.hero-desc h1::after {
+  content: "";
+  position: absolute;
+  right: -10px;
+  bottom: 15px;
+  width: 3px;
+  height: 70%;
+  border-radius: 0.5rem;
+  background-color: var(--primaryColor);
 }
 
 .hero-desc p {
   color: var(--whiteColor);
   font-size: var(--medium-font);
+  font-weight: 500;
 }
