--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -126,6 +126,7 @@
 
   .navbar-list {
     display: none;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     flex-direction: column;
     position: absolute;
     right: 0;
