--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 :root {
   --primaryColor: #61dae7;
   --darkColor: #20232a;
+  --dark-opacity-8: rgba(0, 0, 0, 0.8);
   --light-darkColor: #282c34;
   --redColor: #d33232;
   --whiteColor: #fff;
@@ -32,7 +33,7 @@
 
   /* other */
   --transition: 0.3s ease-in-out;
-  --header-top-hieght: 100px;
+  --header-top-hieght: 90px;
   --header-bottom-hieght: 60px;
 }
 
